force-app/main/default/objects/sugati__Resource_Configuration__c/sugati__Resource_Configuration__c.object-meta.xml
<CustomObject>
    <label>Resource Configuration</label>
    <nameField>
        <displayFormat>RC-{00000000}</displayFormat>
        <label>Resource Configuration Identifier</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>