force-app/main/default/objects/sugati__Resource_Configuration__c/fields/sugati__S_RC_Child_No_Bed__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RC_Child_No_Bed__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of additional children allowed in the room who do not require a bed</description>
    <inlineHelpText>The number of additional children allowed in the room who do not require a bed</inlineHelpText>
    <label>Child No Bed</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>