force-app/main/default/objects/sugati__Resource_Configuration__c/fields/sugati__S_RC_Configuration_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RC_Configuration_Name__c</fullName>
    <label>Configuration Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>