force-app/main/default/objects/sugati__Resource_Configuration__c/fields/sugati__S_RC_Description__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RC_Description__c</fullName>
    <description>Add narrative to your configuration arrangement.</description>
    <inlineHelpText>Add narrative to your configuration arrangement.</inlineHelpText>
    <label>Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>