force-app/main/default/objects/sugati__Resource_Configuration__c/fields/sugati__S_RC_Is_Default__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RC_Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>