force-app/main/default/objects/sugati__Resource_Configuration__c/fields/sugati__S_RC_Max_age_of_Child_No_Bed__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RC_Max_age_of_Child_No_Bed__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The age at which a Child is no longer allowed to not have a bed. IE enter 4 if you want this to be for 3 year olds and younger.</description>
    <inlineHelpText>The age at which a Child is no longer allowed to not have a bed. IE enter 4 if you want this to be for 3 year olds and younger.</inlineHelpText>
    <label>Max age of Child No Bed</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>