force-app/main/default/objects/sugati__Resource_Configuration__c/fields/sugati__S_RC_Max_Children__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RC_Max_Children__c</fullName>
    <description>The maximum number of children allowed to use the resource at one point.</description>
    <inlineHelpText>The maximum number of children allowed to use the resource at one point.</inlineHelpText>
    <label>Max Children</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>