force-app/main/default/objects/sugati__Resource_Configuration__c/fields/sugati__S_RC_Min_Children__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RC_Min_Children__c</fullName>
    <description>The minimum number of children allowed to use the resource at one point. If no value assume 0.</description>
    <inlineHelpText>The minimum number of children allowed to use the resource at one point. If no value assume 0.</inlineHelpText>
    <label>Min Children</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>