force-app/main/default/objects/sugati__Resource_Configuration__c/fields/sugati__S_RC_Min_Total_Persons__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RC_Min_Total_Persons__c</fullName>
    <label>Min Total Persons</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>