force-app/main/default/objects/sugati__Resource_Configuration__c/fields/sugati__S_RC_Resource__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RC_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource</label>
    <referenceTo>sugati__Resource__c</referenceTo>
    <relationshipLabel>Resource Configurations</relationshipLabel>
    <relationshipName>Resource_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>