force-app/main/default/objects/sugati__Resource_Configuration__c/fields/sugati__S_RC_Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RC_Supplier_Name__c</fullName>
    <formula>IF(ISBLANK(sugati__S_RC_Resource__c), sugati__S_RC_Resource_Unit__r.sugati__S_RU_Resource__r.sugati__S_R_Supplier__r.Name, sugati__S_RC_Resource__r.sugati__S_R_Supplier__r.Name)</formula>
    <label>Supplier Name</label>
    <type>Text</type>
</CustomField>