force-app/main/default/objects/sugati__Resource_Configuration__c/recordTypes/sugati__Cabin.recordType-meta.xml
<RecordType>
    <fullName>sugati__Cabin</fullName>
    <active>true</active>
    <label>Cabin</label>
</RecordType>