force-app/main/default/objects/sugati__Resource_Configuration__c/recordTypes/sugati__Flight.recordType-meta.xml
<RecordType>
    <fullName>sugati__Flight</fullName>
    <active>true</active>
    <label>Flight</label>
</RecordType>